fix css responsive issues and make clear mobile cues for clicking on iphone. imporve accesibility of footer link on mobile

--- a/css/Home.css
+++ b/css/Home.css
@@ -36,12 +36,16 @@ h4{
   font-size: 1.3vw;
   font-weight: 700;
 }
+.footer h4{
+  font-size: 12px;
+  font-weight: 700;
+}
 h5{
   font-size: 2.0vw;
   font-weight: 400;
 }
 nav{
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 500;
 }
 /* Font Coloring */
@@ -77,7 +81,7 @@ nav{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 15%;
+  width: 180px;
   border-radius: 5px;
 }
 .about,
@@ -86,16 +90,14 @@ nav{
   align-items: center;
   justify-content: center;
   height: 30px;
-  width: 70px;
+  width: 90px;
 }
 .about{
   background-color: white;
   color: #111111;
-  padding-right: 6px;
 }
 .work{
   border-color: white;
-  padding-left: 6px;
 }
 /*Banner with Name and Tagline*/
 .bannerContainer{
@@ -190,7 +192,7 @@ nav{
   align-items: center;
   justify-content: center;
   background-color: black;
-  height: 80px;
+  height: 110px;
   width: 100%;
   margin-top: 20px;
 }
@@ -296,13 +298,20 @@ nav{
     font-weight: 500;
   }
   /*Alignment Adjustments*/
+.nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100px;
+    border-radius: 5px;
+  }
   .about,
   .work{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 30px;
-    width: 60px;
+    width: 50px;
   }
   .quoteContainer{
     height: 90px;
@@ -362,7 +371,7 @@ nav{
     .oneTwoGroup{
       display: flex;
       flex-direction: column;
-      height: 400px;
+      height: 420px;
       width: 100%;
       justify-content: center;
       align-items: center;
@@ -372,7 +381,29 @@ nav{
       padding-right: 0px;
       padding-bottom: 25px;
     }
-    .footer{
-      height: 30px;
+    .three{
+      padding-top: 15px;
     }
+    .footer{
+      height: 70px;
+    }
+}
+
+@media screen and (min-width: 1408px){
+  h1{
+    font-size: 75px;
+    font-weight: 700;
+  }
+  h2{
+    font-size: 57px;
+    font-weight: 600;
+  }
+  h4{
+    font-size: 20px;
+    font-weight: 700;
+  }
+  h5{
+    font-size: 30px;
+    font-weight: 400;
+  }
 }
