--- a/css/Modal.css
+++ b/css/Modal.css
@@ -43,7 +43,7 @@
   display: none;
 }
 .pre, .nxt{
-  width:6%;
+  width:10%;
   height: 100%;
   position: absolute;
   top: 0;
